; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/tipc/extr_bearer.c_tipc_bearer_resolve_congestion.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/tipc/extr_bearer.c_tipc_bearer_resolve_congestion.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bearer = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }
%struct.link = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tipc_bearer_resolve_congestion(%struct.bearer* %0, %struct.link* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.bearer*, align 8
  %5 = alloca %struct.link*, align 8
  %6 = alloca i32, align 4
  store %struct.bearer* %0, %struct.bearer** %4, align 8
  store %struct.link* %1, %struct.link** %5, align 8
  store i32 1, i32* %6, align 4
  %7 = load %struct.bearer*, %struct.bearer** %4, align 8
  %8 = getelementptr inbounds %struct.bearer, %struct.bearer* %7, i32 0, i32 1
  %9 = call i64 @list_empty(i32* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %30

12:                                               ; preds = %2
  %13 = load %struct.bearer*, %struct.bearer** %4, align 8
  %14 = getelementptr inbounds %struct.bearer, %struct.bearer* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = call i32 @spin_lock_bh(i32* %15)
  %17 = load %struct.bearer*, %struct.bearer** %4, align 8
  %18 = call i32 @bearer_push(%struct.bearer* %17)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %24, label %20

20:                                               ; preds = %12
  %21 = load %struct.bearer*, %struct.bearer** %4, align 8
  %22 = load %struct.link*, %struct.link** %5, align 8
  %23 = call i32 @tipc_bearer_schedule_unlocked(%struct.bearer* %21, %struct.link* %22)
  store i32 0, i32* %6, align 4
  br label %24

24:                                               ; preds = %20, %12
  %25 = load %struct.bearer*, %struct.bearer** %4, align 8
  %26 = getelementptr inbounds %struct.bearer, %struct.bearer* %25, i32 0, i32 0
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 0
  %28 = call i32 @spin_unlock_bh(i32* %27)
  %29 = load i32, i32* %6, align 4
  store i32 %29, i32* %3, align 4
  br label %30

30:                                               ; preds = %24, %11
  %31 = load i32, i32* %3, align 4
  ret i32 %31
}

declare dso_local i64 @list_empty(i32*) #1

declare dso_local i32 @spin_lock_bh(i32*) #1

declare dso_local i32 @bearer_push(%struct.bearer*) #1

declare dso_local i32 @tipc_bearer_schedule_unlocked(%struct.bearer*, %struct.link*) #1

declare dso_local i32 @spin_unlock_bh(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
